--- a/src/components/UI/NavBar/NavBar.module.css
+++ b/src/components/UI/NavBar/NavBar.module.css
@@ -1,21 +1,20 @@
 .NavBarContainer {
-    width: 99.5%;
-    position: sticky;
     top: 0;
     z-index: 900;
     height: 70px;
-
+    box-sizing: border-box;
+    
 }
 
 .NavBar {
     background-color: rgb(74, 156, 223);
     background-color: #FF0000;
-    width: 100%;
     border-radius: 0 0 5px 5px;
     border: 1px solid black;
     top: 0; 
     display: flex;
     height: 100%;
+    box-sizing: border-box;
 
 }
 
@@ -43,6 +42,7 @@
     box-sizing: border-box;
     height: 100%;
     padding: 6px;
+    z-index: 800;
 
 }
 
