--- a/src/components/PokemonInfo/PokemonSprite/PokemonSprite.module.css
+++ b/src/components/PokemonInfo/PokemonSprite/PokemonSprite.module.css
@@ -1,6 +1,14 @@
+
+.SpritesContainerBorder {
+    border: 4px solid #c5c5c5;
+    border-radius: 50%;
+    padding: 10px;
+    cursor: pointer;
+
+}
+
 .SpritesContainer {
-    border: 1px solid #c5c5c5;
-    background-color: #c5c5c5;
+    border: 4px solid #c5c5c5;
     border-radius: 50%;
     width: 100%;
     cursor: pointer;
