--- a/src/components/PokemonInfo/PokemonTypes/PokemonTypes.module.css
+++ b/src/components/PokemonInfo/PokemonTypes/PokemonTypes.module.css
@@ -3,42 +3,71 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
+    box-sizing: border-box;
 }
-
 
 .PokemonDamageRelations {
-    border-radius: 40px;
-    padding: 25px;
-    background-image:  url("https://megadexter.com/ui/dex/assets/bg/bgpk.png");
-    background-color: #cccccc;
-    border: 2px solid black;
-    
-}
-
-.DamageRelationCategory{
-    border: 1px solid brown;
-    border-radius: 10px;
-    margin: 20px auto;
-    padding: 10px;
-    background-image:  url("https://megadexter.com/ui/manifiesto/assets/bg/white.png");
-
+    box-sizing: border-box;
+    display: flex;
+    flex-flow: row wrap;
 }
 
 .DamageCategoryTitle {
     margin: 0 auto;
     font-weight: 600;
+    box-sizing: border-box;
 }
 
+
+.Card {
+    border: 4px solid black;
+    border-radius: 40px;
+    overflow: hidden;
+    width: 100%;
+    margin: 15px auto;
+    box-sizing: border-box;
+}
+
+.BoxTitle {
+    margin: 0 auto;
+    background-color: black;
+    color: white;
+    font-size: 125%;
+    font-weight: 600;
+    padding-bottom: 2px;
+    box-sizing: border-box;
+}
+
+.PokeName {
+    font-family: 'poppins';
+    text-transform: capitalize;
+    font-weight: 600;
+    margin-top: 5px;
+    padding: 5px 10px;
+    font-size: 115%;
+    box-sizing: border-box;
+    border-radius: 18.5px;
+    display: inline-block;
+    color: white;
+}
 
 @media (min-width: 768px) {
 .PokemonDamageRelationsContainer {
     grid-area: dmgRel;
 }
+    .Card {
+        width: 49%;
+    }
 }
 
 @media (min-width: 992px) {
     .PokemonDamageRelationsContainer {
         margin:0 auto;
         width: 95%;;
+        box-sizing: border-box;
     }
+    .Card {
+        width: 33%;
+    }
+
 }
