--- a/src/components/PokemonInfo/PokemonSprite/PokemonSprite.module.css
+++ b/src/components/PokemonInfo/PokemonSprite/PokemonSprite.module.css
@@ -1,14 +1,14 @@
 
 .SpritesContainerBorder {
-    border: 4px solid #c5c5c5;
     border-radius: 50%;
+    background-color: #ddd;
     padding: 10px;
     cursor: pointer;
 
 }
 
 .SpritesContainer {
-    border: 4px solid #c5c5c5;
+    background-color: white;
     border-radius: 50%;
     width: 100%;
     cursor: pointer;
